netdata/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: netdata
  labels:
    app: netdata
    chart: netdata-3.3.1
    release: netdata
    heritage: Helm
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/auth-url: "https://auth.terranblake.com/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.terranblake.com/oauth2/start?rd=https://stats.terranblake.com/"
spec:
  tls:
    - hosts:
      - stats.terranblake.com
      secretName: stats-tls
  rules:
    - host: stats.terranblake.com
      http:
        paths:
          - path: /
            backend:
              serviceName: netdata
              servicePort: http
